# SerpentLua

./: .gitignore  CMakeLists.txt  README.md  TODO.md  about.md  changelog.md  mod.json
.github/workflows/: multi-platform.yml
.test/: README.md  yellowcat98_plugintest.cpp  yellowcat98_plugintest.exp
include/: SerpentLua.hpp
include/internal/: SerpentLua.hpp
include/internal/std/: Enums.hpp  Playground.hpp  PluginEntry.hpp  UI.hpp
include/internal/ui/: OwnPluginManager.hpp  PluginFetcherPopup.hpp  PluginInfoPopup.hpp  PluginJudgmentPopup.hpp  PluginUploader.hpp  ScriptItem.hpp  ScriptsLayer.hpp  SelectLayer.hpp  SetUserStatusPopup.hpp
include/luau/VM/include/: lua.h
plugin_examples/yellowcat98.nonativeplugintest/: CMakeLists.txt  README.md  mod.json
plugin_examples/yellowcat98.nonativeplugintest/src/: main.cpp
plugin_examples/yellowcat98.plugintest/: plugin.slm  yellowcat98_plugintest.cpp
plugins/yellowcat98.modify/: CMakeLists.txt
plugins/yellowcat98.modify/src/: main.cpp
plugins/yellowcat98.plugintest/: README.md  yellowcat98_plugintest.cpp
script_examples/: examples.basic.lua  examples.modify.lua  examples.modify2.lua  examples.playground.lua  examples.plugintest.lua  examples.ui.lua
scripts_examples/: examples.basic.lua  examples.modify.lua  examples.playground.lua
src/: Plugin.cpp  PluginMetadata.cpp  SerpentLua.cpp  main.cpp  utility.cpp
src/internal/: AuthManager.cpp  DisplayInfo.cpp  RuntimeManager.cpp  ScriptBuiltin.cpp  ScriptMetadata.cpp  ServerManager.cpp  SettingsIdk.cpp  StartupOperations.cpp  script.cpp
src/internal/hooks/: MenuLayer.cpp  ProfilePage.cpp
src/internal/std/: Enums.cpp  Playground.cpp  PluginEntry.cpp  UI.cpp
src/internal/std/ui/: AttributeHandler.cpp  UI.cpp
src/internal/ui/: OwnPluginManager.cpp  PluginFetcherPopup.cpp  PluginInfoPopup.cpp  PluginJudgmentPopup.cpp  PluginUploader.cpp  ScriptItem.cpp  ScriptsLayer.cpp  SelectLayer.cpp  SetUserStatusPopup.cpp
